--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "@popperjs/core": "^2.11.8"
   }
 }
